--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,58 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="SWEDesigner: a web app for generating code directly from UML diagrams">
-		<meta name="keywords" content="SWEDesigner, UML, code, generation, diagram">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-		<title>SWEDesigner</title>
-
-		<!-- Add to homescreen for Chrome on Android -->
-		<meta name="mobile-web-app-capable" content="yes">
-		<link rel="icon" sizes="192x192" href="static/images/android-desktop.png">
-
-		<!-- Add to homescreen for Safari on iOS -->
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<meta name="apple-mobile-web-app-title" content="Material Design Lite">
-		<link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
-
-		<!-- Tile icon for Win8 (144x144 + tile color) -->
-		<meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-		<meta name="msapplication-TileColor" content="#3372DF">
-
-		<link rel="shortcut icon" href="static/images/favicon.png">
-
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
-		<link rel="stylesheet" href="styles.css">
-		<style>
-		#view-source {
-			position: fixed;
-			display: block;
-			right: 0;
-			bottom: 0;
-			margin-right: 40px;
-			margin-bottom: 40px;
-			z-index: 900;
-		}
-		</style>
-
-		<link rel="stylesheet" type="text/css" href="joint.css"/>
-		<script src="jquery.js"></script>
-		<script src="lodash.js"></script>
-		<script src="backbone.js"></script>
-		<script src="joint.js"></script>
-		<script src="joint.shapes.uml.js"></script>
-		<script src="custom.js"></script>
-	</head>
-	<body>
-
-		<a href="#" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">New project</a>
-
-		<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-		<script src="custom.js"></script>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <title>SWEDesigner</title>
+    <link rel="stylesheet" type="text/css" href="assets/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/joint.css"/>
+    <script data-main="js/main" src="js/libs/require/require.js"></script>
+</head>
+<body>
+<h1>SWEDesigner</h1>
+<div id="content">
+<div id="newcell"></div>
+<div id="paper"></div>
+<div id="details"></div>
+<button id="switch">switcha</button>
+<button id="add">salva</button>
+    <input type="file" id="files" name="files[]"/>
+</div>
+</body>
 </html>
