--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,19 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <title>SWEDesigner</title>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>Material Design Lite</title>
+
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <!--<link rel="icon" sizes="192x192" href="static/images/android-desktop.png">-->
+
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Material Design Lite">
+    <!--<link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">-->
+
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <!--<meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">-->
+    <meta name="msapplication-TileColor" content="#3372DF">
+
+    <!--<link rel="shortcut icon" href="static/images/favicon.png">-->
+
+    <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
+    <!--
+    <link rel="canonical" href="http://www.example.com/">
+    -->
+
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
+
     <link rel="stylesheet" type="text/css" href="assets/style.css"/>
     <link rel="stylesheet" type="text/css" href="assets/joint.css"/>
     <script data-main="js/main" src="js/libs/require/require.js"></script>
 </head>
 <body>
-<h1>SWEDesigner</h1>
-<div id="content">
-<div id="newcell"></div>
-<div id="paper"></div>
-<div id="details"></div>
-<button id="switch">switcha</button>
-<button id="add">salva</button>
-    <input type="file" id="files" name="files[]"/>
+<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+        <div class="mdl-layout__header-row">
+            <span class="mdl-layout-title">SWEDesigner</span>
+            <div class="mdl-layout-spacer"></div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+                <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
+                    <i class="material-icons">search</i>
+                </label>
+                <div class="mdl-textfield__expandable-holder">
+                    <input class="mdl-textfield__input" type="text" id="search">
+                    <label class="mdl-textfield__label" for="search">Enter your query...</label>
+                </div>
+            </div>
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
+                <i class="material-icons">more_vert</i>
+            </button>
+            <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
+                <li class="mdl-menu__item">About</li>
+                <li class="mdl-menu__item">Contact</li>
+                <li class="mdl-menu__item">Legal information</li>
+            </ul>
+        </div>
+    </header>
+
+    <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+        <header class="demo-drawer-header">
+            <img src="images/user.jpg" class="demo-avatar">
+            <!--<div class="demo-avatar-dropdown">
+              <span>hello@example.com</span>
+              <div class="mdl-layout-spacer"></div>
+              <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+                <i class="material-icons" role="presentation">arrow_drop_down</i>
+                <span class="visuallyhidden">Accounts</span>
+              </button>
+              <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
+                <li class="mdl-menu__item">hello@example.com</li>
+                <li class="mdl-menu__item">info@example.com</li>
+                <li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
+              </ul>
+            </div>-->
+        </header>
+        <nav id="navbar" class="mdl-navigation mdl-color--blue-grey-800">
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">home</i>Home</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">create</i>New</a>
+            <input type="file" id="files" name="files[]" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">open_in_browser</i>Open</input>
+            <a id="savefile" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">save</i>Save</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">cloud_download</i>Download</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">donut_large</i>Compile</a>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">local_offer</i>Useful links</a>
+            <div class="mdl-layout-spacer"></div>
+            <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
+        </nav>
+    </div>
+
+
+    <main class="mdl-color--grey-100 main">
+        <div class=" demo-content">
+            <div class="components">
+                <div class="mdl-shadow--2dp comp">
+                    <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+                        <h2 class="mdl-card__title-text mdl-color-text--white">Componenti</h2>
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">
+                            Nuova classe
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div id="paper" class="demo-graph mdl-shadow--2dp "></div>
+
+
+            <div class="demo-cards ">
+                <div class="mdl-shadow--2dp prop">
+                    <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
+                        <h2 class="mdl-card__title-text">Proprietà</h2>
+                    </div>
+                    <div id ="details" class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                        <input class="mdl-textfield__input" type="text" id="classname">
+                        <label class="mdl-textfield__label" for="classname">Nome classe</label>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+    <!--<div id="content">-->
+    <!--<div id="newcell"></div>-->
+    <!--<div id="paper"></div>-->
+    <!--<div id="details"></div>-->
+    <!--<button id="switch">switcha</button>-->
+    <!--<button id="add">salva</button>-->
+    <!--<input type="file" id="files" name="files[]"/>-->
+    <!--</div>-->
 </div>
+<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </body>
 </html>
