--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,8 +87,8 @@
                                                        role="presentation">home</i>Home</a>
             <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
                                                        role="presentation">create</i>New</a>
-            <input type="file" id="files" name="files[]" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons"
-                                                       role="presentation">open_in_browser</i>Open</input>
+            <input type="file" id="files" name="files[]"/><label class=" upload mdl-navigation__link" for="files"><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                       role="presentation">open_in_browser</i>Open</label>
             <a id="savefile" class="mdl-navigation__link"><i class="mdl-color-text--blue-grey-400 material-icons"
                                                        role="presentation">save</i>Save</a>
             <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
@@ -111,7 +111,7 @@
                     <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
                         <h2 class="mdl-card__title-text mdl-color-text--white">Componenti</h2>
                     </div>
-                    <div class="mdl-card__actions mdl-card--border">
+                    <div id ="components" class="mdl-card__actions mdl-card--border">
                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">
                             Nuova classe
                         </button>
@@ -124,7 +124,7 @@
             <div class="demo-cards ">
                 <div class="mdl-shadow--2dp prop">
                     <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
-                        <h2 class="mdl-card__title-text">Proprietà</h2>
+                        <h2 class="mdl-card__title-text mdl-color-text--white">Proprietà</h2>
                     </div>
                     <div id ="details" class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                         <input class="mdl-textfield__input" type="text" id="classname">
