--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -134,7 +134,7 @@
 
                     <script type="text/template" id="item-template">
                             <label><%= name %></label>
-                            <input class="edit" value="<%= value %>" id="editable-<%= name %>">
+                            <input class="edit" value="<%= value %>" id="<%=name%>">
                     </script>
 
                 </div>
