continuazione switch graph

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -186,10 +186,12 @@
                                     </button>
                                 </div>
                             </div>
-                            <% }} %>
+                            <% } %>
                             <button class="add" name="addmethod">Aggiungi
                                 Metodo
                             </button>
+                            <button class="switch" name="switch" value="<%= methods[met].id">Vai al diagramma delle attività</button>
+                            <% } %>
                         </div>
                     </script>
 
@@ -225,10 +227,12 @@
                                     </button>
                                 </div>
                             </div>
-                            <% }} %>
+                            <% } %>
                             <button class="add" name="addmethod">Aggiungi
                                 Metodo
                             </button>
+                            <button class="switch" name="switch" value="<%= methods[met].id">Vai al diagramma delle attività</button>
+                            <% } %>
                         </div>
                     </script>
 
