button torna al diagramma delle classi

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -416,6 +416,7 @@
 
                 </div>
             </div>
+            <button id="switchtoclass" value="class" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color-text--white">Torna al diagramma delle classi</button>
         </div>
     </main>
 
