button torna al diagramma delle classi visibile solamente nei diagrammi delle attività

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -169,12 +169,12 @@
                                        name="methods.<%=met%>.name">
                             </div>
                             <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <label class="mdl-textfield__label" for="<%=methods[met].returntype%>">Valore</label>
+                                <label class="mdl-textfield__label" for="<%=methods[met].returntype%>">Tipo di ritorno</label>
                                 <input class="edit mdl-textfield__input" value="<%= methods[met].returntype %>"
                                        name="methods.<%=met%>.returntype">
                             </div>
 							<div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <label class="mdl-textfield__label" for="<%=methods[met].visibility%>">Valore</label>
+                                <label class="mdl-textfield__label" for="<%=methods[met].visibility%>">Visibilità</label>
                                 <input class="edit mdl-textfield__input" value="<%= methods[met].visibility %>"
                                        name="methods.<%=met%>.visibility">
                             </div>
