unificato assignment e initialization parte client

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -382,7 +382,7 @@
 
                     </script>
 
-                    <script type="text/template" id="activity.HxAssignement">
+                    <!--<script type="text/template" id="activity.HxAssignement">
                         <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
                         >
                             <label class="mdl-textfield__label" for="name">Variabile</label>
@@ -404,7 +404,7 @@
                             <input class="edit mdl-textfield__input" value="<%= comment %>" name="comment">
                         </div>
 
-                    </script>
+                    </script>-->
 
                     <script type="text/template" id="activity.HxCustom">
                         <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
@@ -470,7 +470,7 @@
 
                     </script>
 
-                    <script type="text/template" id="activity.HxInitialization">
+                    <script type="text/template" id="activity.HxVariable">
                         <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
                         >
                             <label class="mdl-textfield__label" for="name">Nome</label>
@@ -480,6 +480,11 @@
                         >
                             <label class="mdl-textfield__label" for="type">Tipo</label>
                             <input class="edit mdl-textfield__input" value="<%= type %>" name="type">
+                        </div>
+                        <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+                        >
+                            <label class="mdl-textfield__label" for="operation">Operazione</label>
+                            <input class="edit mdl-textfield__input" value="<%= operation %>" name="operation">
                         </div>
                         <div class="prop_inputs mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
                         >
