prova invio json

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -91,7 +91,7 @@
                                                              role="presentation">save</i> Save</a>
             <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
                                                         role="presentation">cloud_download</i> Download</a>
-            <a class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
+            <a id="compile" class="mdl-navigation__link" href="#"><i class="mdl-color-text--blue-grey-400 material-icons"
                                                         role="presentation">donut_large</i> Compile</a>
             <a class="mdl-navigation__link" href="doc/index.html"><i
                     class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>
